--- a/files/index.html
+++ b/files/index.html
@@ -19,6 +19,7 @@
         <span>Games</span>
         <span>Premium</span>
     </div>
+
     <main>
     <header>
         <div class="header">
@@ -42,8 +43,8 @@
         <div class="btn-container">
             <img class="crunchy-logo-banner" src="../imageFiles/png/crunchyroll-logo-2.png">
             <div class="btns">
-            <button class="btn-one hovers">Entrar</button>
-            <button class="btn-two hovers">Cadastre-se</button>
+            <button class="btn-one hovers2">Entrar</button>
+            <button class="btn-two hovers2">Cadastre-se</button>
             </div>
         </div>
     </div>
@@ -52,7 +53,7 @@
     <section class="sec-one">
         <div class="catalogo-container">
             <p class="catalogo-title">O Maior Catálogo de Animes do Mundo</p>
-            <button class="premium-btn hovers">VER PLANOS PREMIUM</button>
+            <button class="premium-btn">VER PLANOS PREMIUM</button>
         </div>
         <div class="infos">
             <div class="time-container icons">
@@ -78,7 +79,7 @@
         <div class="sec2-title-container">
             <h3>Assista onde quiser, quando quiser</h3>
             <p>Assista no seu PC, celular, Xbox, PS4, Roku, Apple TV e qualquer outro dispositivo que tenha iOS ou Android.</p>
-            <button class="premium-btn2 premium-btn hovers">VER PLANOS PREMIUM</button>
+            <button class="premium-btn2 premium-btn">VER PLANOS PREMIUM</button>
         </div>
     </section>
 
@@ -95,7 +96,7 @@
                     <p class="fan">FAN</p>
                     <p class="price">R$ 25,00/mês</p>
                     <p class="impostos">+ IMPOSTOS APLICÁVEIS</p>
-                    <button class="premium-btn-side premium-btn hovers">INICIAR TESTE GRATUITO DE 14 DIAS</button>
+                    <button class="premium-btn-side premium-btn">INICIAR TESTE GRATUITO DE 14 DIAS</button>
                     <button class="premium-btn2">PULAR TESTE GRATUITO</button>
                 </div>
                 <div class="box-two">
@@ -133,7 +134,7 @@
                 <p class="fan">MEGA FAN (1 Mês)</p>
                 <p class="price">R$ 32,00/mês</p>
                 <p class="impostos">+ IMPOSTOS APLICÁVEIS</p>
-                <button class="premium-btn3 middle hovers">INICIAR TESTE GRATUITO DE 14 DIAS</button>
+                <button class="premium-btn3 middle">INICIAR TESTE GRATUITO DE 14 DIAS</button>
                 <button class="premium-btn2">PULAR TESTE GRATUITO</button>
             </div>
             <div class="box-two">
@@ -170,7 +171,7 @@
                     <p class="fan">MEGA FAN (12 Meses)</p>
                     <p class="price">R$ 315,00/ano</p>
                     <p class="impostos">+ IMPOSTOS APLICÁVEIS</p>
-                    <button class="premium-btn-side2 premium-btn hovers">INICIAR TESTE GRATUITO DE 14 DIAS</button>
+                    <button class="premium-btn-side2 premium-btn">INICIAR TESTE GRATUITO DE 14 DIAS</button>
                     <button class="premium-btn2">PULAR TESTE GRATUITO</button>
                 </div>
                 <div class="box-two">
@@ -210,7 +211,6 @@
     <footer>
         <span>Made by:  <a href="https://www.linkedin.com/in/bruno-messias-bs/" target="_blank">Bruno Messias</a></span>
     </footer>
-
-    <script src="./hovers.js"></script>
+    
 </body>
 </html>
